--- a/package.json
+++ b/package.json
@@ -54,6 +54,10 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.14",
     "@react-shanties/core": "^0.0.11",
     "@reduxjs/toolkit": "^1.9.3",
     "electron-squirrel-startup": "^1.0.0",
@@ -61,6 +65,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router": "^6.9.0",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "simple-git": "^3.17.0"
