--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "electron-forge start --inspect-electron",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -68,6 +68,7 @@
     "react-router": "^6.9.0",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
-    "simple-git": "^3.17.0"
+    "simple-git": "^3.17.0",
+    "typed-redux-saga": "^1.5.0"
   }
 }
