--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.9.0",
+    "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "simple-git": "^3.17.0",
