--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "test": "jest"
   },
   "keywords": [],
   "author": {
@@ -28,12 +29,15 @@
     "@electron-forge/maker-zip": "^6.0.5",
     "@electron-forge/plugin-webpack": "^6.0.5",
     "@react-ddd/eslint-config": "^0.3.1",
+    "@swc/core": "^1.3.54",
+    "@swc/jest": "^0.2.26",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "@types/redux-saga-tester": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
@@ -46,6 +50,7 @@
     "jest": "^29.5.0",
     "jest-gwt": "^3.1.1",
     "node-loader": "^2.0.0",
+    "redux-saga-tester": "^1.0.874",
     "style-loader": "^3.0.0",
     "ts-jest": "^29.0.5",
     "ts-loader": "^9.2.2",
